// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Documentation 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel "
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel réduit pour cette sous-action : 3,3 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristiques liées
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle la compétence <b>voirie</b> ?",
              }
            }
          />
          <section
            className="fr-accordion fr-mb-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-q1"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                En savoir plus
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Contenu (html) pour l‘onglet Documentation.",
                }
              }
              id="accordion-q1"
            />
          </section>
          <div
            className="fr-fieldset__content pl-4 "
          >
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c1"
                onChange={[Function]}
                type="radio"
                value="c1"
              />
              <label
                className="fr-label"
                htmlFor="q1-c1"
              >
                Oui, pour l’ensemble de la collectivité
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c2"
                onChange={[Function]}
                type="radio"
                value="c2"
              />
              <label
                className="fr-label"
                htmlFor="q1-c2"
              >
                Oui, uniquement sur trottoirs, parkings ou zones d'activités ou  industrielles
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c3"
                onChange={[Function]}
                type="radio"
                value="c3"
              />
              <label
                className="fr-label"
                htmlFor="q1-c3"
              >
                Non
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle conclu <b>des ventes ou des contrats d’utilisation</b> sur les dix dernières années ?",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline inline-radio"
          >
            <div
              className="fr-radio-group fr-radio-group--sm"
            >
              <input
                checked={false}
                disabled={false}
                id="q2-true"
                onChange={[Function]}
                type="radio"
                value="true"
              />
              <label
                className="fr-label"
                htmlFor="q2-true"
              >
                Oui
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm"
            >
              <input
                checked={false}
                disabled={false}
                id="q2-false"
                onChange={[Function]}
                type="radio"
                value="false"
              />
              <label
                className="fr-label"
                htmlFor="q2-false"
              >
                Non
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Quelle est la part de la collectivité dans l’EPCI compétent en matière de <b>politique du logement et cadre de vie ?</b>",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline"
          >
            <label
              className="fr-label"
              htmlFor="q3"
            >
              Part en pourcentage
            </label>
            <input
              className="fr-input"
              disabled={false}
              id="q3"
              max={100}
              min={0}
              onChange={[Function]}
              style={
                Object {
                  "width": 224,
                }
              }
              type="number"
              value="undefined"
            />
          </div>
          <section
            className="fr-accordion fr-mt-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-part-q3"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                Comment calculer la part ?
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La part se rapporte au nombre d'habitants (nombre d'habitants de la collectivité / nombre d'habitants de la structure compétente) ou au pouvoir de la collectivité dans la structure compétente (nombre de voix d'élu de la collectivité / nombre de voix total dans l'organe délibératoire de la structure compétente) si cette part est supérieure à celle liée au nombre d'habitants.",
                }
              }
              id="accordion-part-q3"
            />
          </section>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Plusieurs Questions 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel réduit pour cette sous-action : 3,3 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristiques liées
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle la compétence <b>voirie</b> ?",
              }
            }
          />
          <section
            className="fr-accordion fr-mb-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-q1"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                En savoir plus
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Contenu (html) pour l‘onglet Documentation.",
                }
              }
              id="accordion-q1"
            />
          </section>
          <div
            className="fr-fieldset__content pl-4 "
          >
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c1"
                onChange={[Function]}
                type="radio"
                value="c1"
              />
              <label
                className="fr-label"
                htmlFor="q1-c1"
              >
                Oui, pour l’ensemble de la collectivité
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c2"
                onChange={[Function]}
                type="radio"
                value="c2"
              />
              <label
                className="fr-label"
                htmlFor="q1-c2"
              >
                Oui, uniquement sur trottoirs, parkings ou zones d'activités ou  industrielles
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c3"
                onChange={[Function]}
                type="radio"
                value="c3"
              />
              <label
                className="fr-label"
                htmlFor="q1-c3"
              >
                Non
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle conclu <b>des ventes ou des contrats d’utilisation</b> sur les dix dernières années ?",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline inline-radio"
          >
            <div
              className="fr-radio-group fr-radio-group--sm"
            >
              <input
                checked={false}
                disabled={false}
                id="q2-true"
                onChange={[Function]}
                type="radio"
                value="true"
              />
              <label
                className="fr-label"
                htmlFor="q2-true"
              >
                Oui
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm"
            >
              <input
                checked={false}
                disabled={false}
                id="q2-false"
                onChange={[Function]}
                type="radio"
                value="false"
              />
              <label
                className="fr-label"
                htmlFor="q2-false"
              >
                Non
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Quelle est la part de la collectivité dans l’EPCI compétent en matière de <b>politique du logement et cadre de vie ?</b>",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline"
          >
            <label
              className="fr-label"
              htmlFor="q3"
            >
              Part en pourcentage
            </label>
            <input
              className="fr-input"
              disabled={false}
              id="q3"
              max={100}
              min={0}
              onChange={[Function]}
              style={
                Object {
                  "width": 224,
                }
              }
              type="number"
              value="60"
            />
          </div>
          <section
            className="fr-accordion fr-mt-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-part-q3"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                Comment calculer la part ?
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La part se rapporte au nombre d'habitants (nombre d'habitants de la collectivité / nombre d'habitants de la structure compétente) ou au pouvoir de la collectivité dans la structure compétente (nombre de voix d'élu de la collectivité / nombre de voix total dans l'organe délibératoire de la structure compétente) si cette part est supérieure à celle liée au nombre d'habitants.",
                }
              }
              id="accordion-part-q3"
            />
          </section>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel "
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Question Binaire 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel pour cette sous-action : 6,7 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristique liée
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle conclu <b>des ventes ou des contrats d’utilisation</b> sur les dix dernières années ?",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline inline-radio"
          >
            <div
              className="fr-radio-group fr-radio-group--sm"
            >
              <input
                checked={false}
                disabled={false}
                id="q2-true"
                onChange={[Function]}
                type="radio"
                value="true"
              />
              <label
                className="fr-label"
                htmlFor="q2-true"
              >
                Oui
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm"
            >
              <input
                checked={false}
                disabled={false}
                id="q2-false"
                onChange={[Function]}
                type="radio"
                value="false"
              />
              <label
                className="fr-label"
                htmlFor="q2-false"
              >
                Non
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel "
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Question Binaire Modifiee 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel réduit pour cette sous-action : 3,3 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristique liée
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle conclu <b>des ventes ou des contrats d’utilisation</b> sur les dix dernières années ?",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline inline-radio"
          >
            <div
              className="fr-radio-group fr-radio-group--sm"
            >
              <input
                checked={true}
                disabled={false}
                id="q2-false"
                onChange={[Function]}
                type="radio"
                value="false"
              />
              <label
                className="fr-label"
                htmlFor="q2-false"
              >
                Non
                <button
                  className="fr-link fr-link--icon-left fr-fi-edit-line fr-ml-3w"
                  onClick={[Function]}
                >
                  Modifier
                </button>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel "
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Question Choix 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel pour cette sous-action : 6,7 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristique liée
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle la compétence <b>voirie</b> ?",
              }
            }
          />
          <section
            className="fr-accordion fr-mb-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-q1"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                En savoir plus
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Contenu (html) pour l‘onglet Documentation.",
                }
              }
              id="accordion-q1"
            />
          </section>
          <div
            className="fr-fieldset__content pl-4 "
          >
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c1"
                onChange={[Function]}
                type="radio"
                value="c1"
              />
              <label
                className="fr-label"
                htmlFor="q1-c1"
              >
                Oui, pour l’ensemble de la collectivité
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c2"
                onChange={[Function]}
                type="radio"
                value="c2"
              />
              <label
                className="fr-label"
                htmlFor="q1-c2"
              >
                Oui, uniquement sur trottoirs, parkings ou zones d'activités ou  industrielles
              </label>
            </div>
            <div
              className="fr-radio-group fr-radio-group--sm vertical"
            >
              <input
                checked={false}
                disabled={false}
                id="q1-c3"
                onChange={[Function]}
                type="radio"
                value="c3"
              />
              <label
                className="fr-label"
                htmlFor="q1-c3"
              >
                Non
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel "
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Question Choix Modifiee 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel réduit pour cette sous-action : 3,3 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristique liée
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "La collectivité a-t-elle la compétence <b>voirie</b> ?",
              }
            }
          />
          <section
            className="fr-accordion fr-mb-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-q1"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                En savoir plus
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Contenu (html) pour l‘onglet Documentation.",
                }
              }
              id="accordion-q1"
            />
          </section>
          <div
            className="fr-fieldset__content pl-4 "
          >
            <div
              className="fr-radio-group fr-radio-group--sm "
            >
              <input
                checked={true}
                disabled={false}
                id="q1-c3"
                onChange={[Function]}
                type="radio"
                value="c3"
              />
              <label
                className="fr-label"
                htmlFor="q1-c3"
              >
                Non
                <button
                  className="fr-link fr-link--icon-left fr-fi-edit-line fr-ml-3w"
                  onClick={[Function]}
                >
                  Modifier
                </button>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel "
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Question Proportion 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel pour cette sous-action : 6,7 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristique liée
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Quelle est la part de la collectivité dans l’EPCI compétent en matière de <b>politique du logement et cadre de vie ?</b>",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline"
          >
            <label
              className="fr-label"
              htmlFor="q3"
            >
              Part en pourcentage
            </label>
            <input
              className="fr-input"
              disabled={false}
              id="q3"
              max={100}
              min={0}
              onChange={[Function]}
              style={
                Object {
                  "width": 224,
                }
              }
              type="number"
              value="undefined"
            />
          </div>
          <section
            className="fr-accordion fr-mt-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-part-q3"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                Comment calculer la part ?
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La part se rapporte au nombre d'habitants (nombre d'habitants de la collectivité / nombre d'habitants de la structure compétente) ou au pouvoir de la collectivité dans la structure compétente (nombre de voix d'élu de la collectivité / nombre de voix total dans l'organe délibératoire de la structure compétente) si cette part est supérieure à celle liée au nombre d'habitants.",
                }
              }
              id="accordion-part-q3"
            />
          </section>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel "
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Potentiel Modal/Perso Potentiel Tabs Question Proportion Modifiee 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <i
          className="fr-fi-settings-line"
        />
         Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <i
          className="fr-fi-information-line"
        />
         Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel fr-tabs__panel--selected"
    id="fr-tabpanel-0"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          Potentiel réduit pour cette sous-action : 3,3 points
        </div>
      </div>
      <h6
        className="mt-8 mb-0"
      >
        Caractéristique liée
      </h6>
      <div
        className="fr-form-group "
      >
        <fieldset
          className="fr-fieldset"
        >
          <legend
            className="fr-fieldset__legend fr-text--regular pt-6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Quelle est la part de la collectivité dans l’EPCI compétent en matière de <b>politique du logement et cadre de vie ?</b>",
              }
            }
          />
          <div
            className="fr-fieldset__content pl-4 fr-fieldset--inline"
          >
            <label
              className="fr-label"
              htmlFor="q3"
            >
              Part en pourcentage
            </label>
            <input
              className="fr-input"
              disabled={false}
              id="q3"
              max={100}
              min={0}
              onChange={[Function]}
              style={
                Object {
                  "width": 224,
                }
              }
              type="number"
              value="60"
            />
          </div>
          <section
            className="fr-accordion fr-mt-3w"
          >
            <h3
              className="fr-accordion__title"
            >
              <button
                aria-controls="accordion-part-q3"
                aria-expanded={false}
                className="fr-accordion__btn"
                onClick={[Function]}
              >
                Comment calculer la part ?
                <i
                  className="fr-fi-information-fill fr-text-default--info fr-mr-3v"
                />
              </button>
            </h3>
            <div
              className="fr-collapse"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La part se rapporte au nombre d'habitants (nombre d'habitants de la collectivité / nombre d'habitants de la structure compétente) ou au pouvoir de la collectivité dans la structure compétente (nombre de voix d'élu de la collectivité / nombre de voix total dans l'organe délibératoire de la structure compétente) si cette part est supérieure à celle liée au nombre d'habitants.",
                }
              }
              id="accordion-part-q3"
            />
          </section>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel "
    id="fr-tabpanel-1"
    role="tabpanel"
    tabIndex="0"
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est &quot;non concerné&quot;.</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;
